# ahkab-cpp

./: CMakeLists.txt  README.md  TUTORIAL.md  test_ac.cir  test_dc.cir  test_diode.cir  test_rc.cir  test_tran.cir
libahkab/: CMakeLists.txt
libahkab/analysis/: ac_analysis.cpp  ac_analysis.hpp  dc_analysis.cpp  dc_analysis.hpp  op_analysis.cpp  op_analysis.hpp  pz_analysis.cpp  pz_analysis.hpp  transient_analysis.cpp  transient_analysis.hpp
libahkab/core/: circuit.cpp  circuit.hpp  errors.hpp  types.hpp
libahkab/devices/: linear_devices.cpp  linear_devices.hpp  nonlinear_devices.cpp  nonlinear_devices.hpp  stamp_helpers.hpp
libahkab/mna/: linear_solver.cpp  linear_solver.hpp  mna_builder.cpp  mna_builder.hpp  nr_solver.cpp  nr_solver.hpp
libahkab/output/: csv_writer.cpp  csv_writer.hpp  table_writer.cpp  table_writer.hpp
libahkab/parser/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
libahkab/results/: results.hpp
src/cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_circuit.cpp  test_integration.cpp  test_netlist.cpp  test_op.cpp
